# qs-favp-mfbo

./: LICENSE  README.md  benchmarks_p3ht_cnt__run_benchmark.py  benchmarks_synthetic__README.md  benchmarks_synthetic__run_ablation.py  benchmarks_synthetic__run_catastrophic.py  benchmarks_synthetic__run_favp_sensitivity.py  pyproject.toml  qsmfbo__core.py  qsmfbo__favp.py  requirements.txt
benchmarks/p3ht_cnt/: README.md  p3ht_cnt_3f_benchmark.py  p3ht_cnt_benchmark.py  p3ht_figure.py  run_benchmark.py
benchmarks/synthetic/: README.md  run_ablation.py  run_benchmark_extended.py  run_catastrophic.py  run_clean.py  run_cost_ablation.py  run_favp_sensitivity.py  run_heavytail.py  run_overhead_sweep.py  run_sweep_rate.py  smoke_robust.py
data/: README.md
qsmfbo/: __init__.py  core.py  favp.py
qsmfbo/qsmfbo/: core.py  favp.py  robust.py
