[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qsmfbo"
version = "1.0.0"
description = "Queue-scheduled multi-fidelity Bayesian optimisation with fidelity-aware verification protocol (FAVP)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kishan Kartha", email = "kishan.esres22@duk.ac.in" },
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch>=2.0",
    "botorch>=0.9.0",
    "gpytorch>=1.11",
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "openpyxl>=3.1",
    "matplotlib>=3.6",
]

[project.urls]
Homepage = "https://github.com/KishanKartha/qs-favp-mfbo"

[tool.setuptools]
packages = ["qsmfbo"]
