[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qsmfbo"
version = "1.0.0"
description = "Queue-scheduled multi-fidelity Bayesian optimisation with fidelity-aware verification protocol (FAVP)."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0",
    "botorch>=0.9.0",
    "gpytorch>=1.11",
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "openpyxl>=3.1",
    "matplotlib>=3.6",
]


[tool.setuptools]
packages = ["qsmfbo"]
